# ProcamCalib

./: .dockerignore  .gitignore  Dockerfile  README.md  calibrate.py
data/gt/: S0_0.json
eval/: empirical.py
src/: CMakeLists.txt
src/CamCalib/: CMakeLists.txt  CamCalib.cpp  CameraCalibrator.cpp  CameraCalibrator.h
src/MirrorCalib/: CMakeLists.txt  MirrorCalib.cpp  MirrorCalibrator.cpp  MirrorCalibrator.h
src/ProcamCalib/: CMakeLists.txt  ProcamCalib.cpp  ProcamCalibrator.cpp  ProcamCalibrator.h  Projector.cpp  Projector.h
src/common/: CharucoDetector.cpp  CharucoDetector.h  Config.h  MirrorPlane.cpp  MirrorPlane.h  Utils.cpp  Utils.h
